--- a/notebooks/ch11/ch11.ipynb
+++ b/notebooks/ch11/ch11.ipynb
@@ -558,6 +558,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "首先证明该等式成立：\n",
+    "\n",
+    "等式左侧可以展开为：\n",
+    "\n",
+    "$$||c - \\delta\\|^2 = (c - \\delta)^T(c - \\delta) = c^Tc - 2c^T\\delta + \\delta^T\\delta$$\n",
+    "\n",
+    "等式右侧可以展开为：\n",
+    "\n",
+    "$$\\|Uc - U\\delta\\|^2 = (Uc - U\\delta)^T(Uc - U\\delta) = c^TU^TUc - 2c^TU^TU\\delta + \\delta^TU^TU\\delta$$\n",
+    "\n",
+    "由于 $\\mathbf{U}$ 为正交矩阵，即：\n",
+    "\n",
+    "$$U^TU = I$$\n",
+    "\n",
+    "所以可得：\n",
+    "\n",
+    "$$c^TU^TUc = c^Tc, c^TU^TU\\delta = c^T\\delta, \\delta^TU^TU\\delta = \\delta^T\\delta$$\n",
+    "\n",
+    "带入以上展开式可证：\n",
+    "\n",
+    "$$\\|\\mathbf{c} - \\mathbf{\\delta}\\|_2 = \\|\\mathbf{U} \\mathbf{c} - \\mathbf{U} \\mathbf{\\delta}\\|_2$$\n",
+    "\n",
+    "为什么这意味着在变量的正交变化之后，扰动的程度不会改变：\n",
+    "\n",
+    "我们可以将扰动的程度理解为变换之后的向量与原向量的距离，即假设我们有扰动变量 $\\delta$，那么扰动的程度即为原变量 $x$ 与扰动后变量 $x+\\delta$ 的距离，即 $||x - (x+\\delta)||_2$，而我们已经证明，乘以正交矩阵之后该距离没有变化，因此扰动的程度没有改变。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 练习11.7.2\n",
     "\n",
     "尝试对函数$f(\\mathbf{x}) = 0.1 x_1^2 + 2 x_2^2$、以及它旋转45度后的函数即$f(\\mathbf{x}) = 0.1 (x_1 + x_2)^2 + 2 (x_1 - x_2)^2$使用AdaGrad算法。它的表现会不同吗？"
@@ -568,6 +599,40 @@
    "metadata": {},
    "source": [
     "**解答：**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们首先对 $f(x) = 0.1x_1^2 + 2x_2^2$ 使用 AdaGrad 算法："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import math\n",
+    "import torch\n",
+    "from d2l import torch as d2l\n",
+    "\n",
+    "def adagrad_2d(x1, x2, s1, s2):\n",
+    "    eps = 1e-6\n",
+    "    g1, g2 = 0.2 * x1, 4 * x2\n",
+    "    s1 += g1 ** 2\n",
+    "    s2 += g2 ** 2\n",
+    "    x1 -= eta / math.sqrt(s1 + eps) * g1\n",
+    "    x2 -= eta / math.sqrt(s2 + eps) * g2\n",
+    "    return x1, x2, s1, s2\n",
+    "\n",
+    "def f_2d(x1, x2):\n",
+    "    return 0.1 * x1 ** 2 + 2 * x2 ** 2\n",
+    "\n",
+    "eta = 0.4\n",
+    "d2l.show_trace_2d(f_2d, d2l.train_2d(adagrad_2d))"
    ]
   },
   {
@@ -951,7 +1016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
